--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url(Restaurent.jpg);
+    background-image: url(Restaurentimg.jpg);
     background-size: cover;
     background-position: fixed;
     background-repeat: no-repeat;
